@@ -55,7 +55,7 @@ public class FormatTest {
 
     @Test
     public void formatBytesObjectParameterTest() {
-        Long longObject = new Long(1024);
+        Long longObject = Long.valueOf(1024);
         assertEquals("1 kBytes", Format.formatBytes(longObject));
     }
 
@@ -137,7 +137,7 @@ public class FormatTest {
 
     @Test
     public void formatBytesShortObjectParameterTest() {
-        Long longObject = new Long(1024);
+        Long longObject = Long.valueOf(1024);
         assertEquals("1 kB", Format.formatBytesShort(longObject));
     }
 
@@ -218,7 +218,7 @@ public class FormatTest {
 
     @Test
     public void formatTimeFrameOtherArguments() {
-        Long millis = new Long(1000L * 60 * 2 + 1234);
+        Long millis = Long.valueOf(1000L * 60 * 2 + 1234);
         assertEquals("2m", Format.formatTimeframe(millis));
         int value = (1000 * 60 * 60 * 2 + 134231);
         assertEquals("2h", Format.formatTimeframe(value));
